--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
       }
 
       .playlist {
-        opacity: 0.4;
         text-decoration: none;
         position: relative;
       }
@@ -156,16 +155,8 @@
         text-shadow: 1px 1px #333;
       }
 
-      .playlist:hover .playlist-image {
-        filter: darken(10.0);
-      }
-
-      .playlist:hover {
-        opacity: 0.9;
-      }
-
-      .playlist-selected {
-        opacity: 1.0;
+      .playlist:hover, .playlist-selected {
+        -webkit-filter: none;
       }
 
       .playlist-wrapper {
