--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
 
       .home {
         font-size: 24px;
-        max-width: 400px;
+        margin: auto;
+      }
+
+      header {
+        width: 400px;
         margin: auto;
       }
 
