--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 
       .playlist-wrapper {
         width: 9rem;
+        height: 11rem;
         margin: 1rem;
       }
 
@@ -207,6 +208,7 @@
         text-transform: uppercase;
         width: 100%;
         margin-bottom: 1rem;
+        z-index: 500;
       }
 
       .load-more:hover {
