--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
       .playlist-image {
         width: 100%;
         height: auto;
+        width: 9rem;
+        height: 9rem;
       }
 
       .playlist-ratio {
