--- a/index.html
+++ b/index.html
@@ -5,341 +5,9 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     <meta name=description content="Move your Spotify playlists to SoundCloud Go">
     <meta name=keywords content="soundcloud playlists music album import export sync synch copy move">
-
-    <style>
-    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {margin: 0; padding: 0; border: 0; outline: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit;}
-
-    table {border-collapse: collapse; border-spacing: 0;}
-    caption, th, td {text-align: left; font-weight: normal;}
-    form legend {display: none;}
-    blockquote:before, blockquote:after, q:before, q:after {content: "";}
-    blockquote, q {quotes: "" "";}
-    ol, ul {list-style: none;}
-    hr {display: none; visibility: hidden;}
-
-    :focus {outline: 0;}
-
-    * {
-      box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -ms-box-sizing: border-box;
-    }
-
-    .cf:before,
-    .cf:after {
-        content: " "; /* 1 */
-        display: table; /* 2 */
-    }
-
-    .cf:after {
-        clear: both;
-    }
-
-    .cf {
-        *zoom: 1;
-    }
-
-
-      body {
-        /*background-image: linear-gradient(150deg, #84bd00,#84bd00 50%, #ff7700 50%, #ff7700);*/
-        background-color: #ffdc01;
-        /*background-image: linear-gradient(90deg, #84bd00,#84bd00 20%, #ff7700 20%, #ff7700);
-        background-image: linear-gradient(90deg, #84bd00, #84bd00 33.33%, #ff7700 33.33%, #ff7700 66.66%, #84bd00 66.66%, #84bd00 100%);
-        background: repeating-linear-gradient(135deg,
-          #84bd00, #84bd00 .25em,
-          #ff7700, #ff7700 .75em
-        );*/
-        width: 100vw;
-        height: 100vh;
-        font-size: 16px;
-        padding: 4rem;
-        font-family: "Avenir";
-      }
-
-      @media (max-width: 600px) {
-        body {
-          padding: 0rem;
-        }
-      }
-
-      #root {
-        max-width: 100vw;
-        overflow: hidden;
-      }
-
-      body, a:link, a:visited, a:hover {
-        color: #333;
-      }
-
-      .home {
-        font-size: 24px;
-        margin: auto;
-      }
-
-      header {
-        width: 400px;
-        max-width: 100vw;
-        margin: auto;
-      }
-
-      .step {
-        display: block;
-        margin: 1rem;
-      }
-
-      .step:before {
-        content: '1';
-        border-radius: 50%;
-        background-color: #333;
-        color: #ffdc01;
-        width: 2rem;
-        height: 2rem;
-        display: inline-block;
-        margin-right: 1rem;
-        text-align: center;
-      }
-
-      .step-2:before {
-        content: '2';
-      }
-      .step-3:before {
-        content: '3';
-      }
-
-      .playlists {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-      }
-
-      .playlist-name {
-        font-size: 18px;
-        font-weight: bold;
-        color: #333;
-        display: block;
-        width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      .playlist:hover .playlist-name {
-        text-decoration: underline;
-      }
-
-      .playlist-name:before {
-        content: '♫';
-        display: inline-block;
-        margin-right: 0.4rem;
-        font-size: 48px;
-        font-weight: bold;
-      }
-
-      .playlist-image {
-        width: 21rem;
-        height: 21rem;
-      }
-
-      .playlist-ratio {
-        font-size: 18px;
-        position: absolute;
-        right: -10px;
-        top: -130px;
-        color: #84bd00;
-        background-color: #333;
-        width: 54px;
-        height: 54px;
-        border-radius: 50%;
-        font-size: 14px;
-        overflow: hidden;
-        border: 1px solid #333;
-      }
-      .playlist-ratio span {
-        width: 50%;
-        position: absolute;
-      }
-      .playlist-ratio span:nth-child(1) {
-        top: 11px;
-        left: 1px;
-        text-align: center;
-      }
-
-      .playlist-ratio span:nth-child(2) {
-        top: 15px;
-        text-align: center;
-        left: 0;
-        width: 100%;
-        color: #f0f0f0;
-        font-size: 18px;
-      }
-
-      .playlist-ratio span:nth-child(3) {
-        left: 47%;
-        top: 26px;
-        text-align: center;
-
-      }
-
-      .playlist-info {
-        font-size: 16px;
-      }
-
-      .playlist-spotify-track-count {
-        color: #84bd00;
-      }
-
-      .playlist-soundcloud-track-count {
-        color: #ff7700;
-      }
-
-      .playlist {
-        text-decoration: none;
-        position: relative;
-      }
-
-      .playlist:hover img {
-        opacity: 0.2;
-      }
-
-      .playlist:hover:before, .playlist:active:before {
-        content: 'Listen on SoundCloud';
-        position: absolute;
-        top: -10rem; bottom: 0; left: 0; right: 0;
-        width: 100%;
-        text-align: center;
-        color:  black;
-        font-weight: bold;
-      }
-
-      .XXXplaylist-imported:hover:before {
-        content: 'Open on SoundCloud';
-        position: absolute;
-        top: -90px; bottom: 0; left: 0; right: 0;
-        text-align: center;
-        color:  white;
-        text-shadow: 1px 1px #333;
-      }
-
-      .playlist:hover, .playlist-selected {
-        -webkit-filter: none;
-      }
-
-      .playlist-wrapper {
-        width: 21rem;
-        margin: 1rem;
-      }
-
-      .step-done {
-         text-decoration: line-through;
-      }
-
-      p {
-        padding: 1rem;
-      }
-
-
-      .status {
-        font-size: 32px;
-        text-align: center;
-        width: 100%;
-        display: inline-block;
-      }
-
-
-      .load-more {
-        text-align: center;
-        margin: auto;
-        background-color: #333;
-        color: #f0dc01;
-        padding: 0.5rem 1rem;
-        border: 0;
-        font-size: 24px;
-        text-transform: uppercase;
-        width: 100%;
-        margin-bottom: 1rem;
-        z-index: 500;
-      }
-
-      .load-more:hover {
-        background-color: #444;
-        cursor: pointer;
-      }
-
-      .loader {
-        margin: 100px auto;
-        font-size: 25px;
-        width: 1em;
-        height: 1em;
-        border-radius: 50%;
-        position: relative;
-        text-indent: -9999em;
-        -webkit-animation: load5 1.1s infinite ease;
-        animation: load5 1.1s infinite ease;
-        -webkit-transform: translateZ(0);
-        -ms-transform: translateZ(0);
-        transform: translateZ(0);
-      }
-
-      @-webkit-keyframes load5 {
-        0%,
-        100% {
-          box-shadow: 0em -2.6em 0em 0em #333, 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.5), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.7);
-        }
-        12.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.7), 1.8em -1.8em 0 0em #333, 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.5);
-        }
-        25% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.5), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.7), 2.5em 0em 0 0em #333, 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        37.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.5), 2.5em 0em 0 0em rgba(0, 0, 0, 0.7), 1.75em 1.75em 0 0em #333, 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        50% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.5), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.7), 0em 2.5em 0 0em #333, -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        62.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.5), 0em 2.5em 0 0em rgba(0, 0, 0, 0.7), -1.8em 1.8em 0 0em #333, -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        75% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.5), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.7), -2.6em 0em 0 0em #333, -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        87.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.5), -2.6em 0em 0 0em rgba(0, 0, 0, 0.7), -1.8em -1.8em 0 0em #333;
-        }
-      }
-      @keyframes load5 {
-        0%,
-        100% {
-          box-shadow: 0em -2.6em 0em 0em #333, 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.5), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.7);
-        }
-        12.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.7), 1.8em -1.8em 0 0em #333, 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.5);
-        }
-        25% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.5), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.7), 2.5em 0em 0 0em #333, 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        37.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.5), 2.5em 0em 0 0em rgba(0, 0, 0, 0.7), 1.75em 1.75em 0 0em #333, 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        50% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.5), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.7), 0em 2.5em 0 0em #333, -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.2), -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        62.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.5), 0em 2.5em 0 0em rgba(0, 0, 0, 0.7), -1.8em 1.8em 0 0em #333, -2.6em 0em 0 0em rgba(0, 0, 0, 0.2), -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        75% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.5), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.7), -2.6em 0em 0 0em #333, -1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2);
-        }
-        87.5% {
-          box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.5), -2.6em 0em 0 0em rgba(0, 0, 0, 0.7), -1.8em -1.8em 0 0em #333;
-        }
-      }
-
-
-    </style>
-
+    <link rel="stylesheet" href="/App.css" />
+    <link rel="stylesheet" href="/Playlist.css" />
+    <link rel="stylesheet" href="/shame.css" />
     <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
     <script>
       if(window.location.origin === "http://spotify-soundcloud.dev") {
