--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/App.css" />
     <link rel="stylesheet" href="/Playlist.css" />
     <link rel="stylesheet" href="/shame.css" />
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
     <script>
       if(window.location.origin === "http://spotify-soundcloud.dev") {
